ingress.yaml

apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: cloud-ingress
  annotations:
    cert-manager.io/cluster-issuer: letsencrypt-nginx
spec:
  tls:
  - hosts:
    - healthbooker.shop
    - backend.healthbooker.shop
    - admin.healthbooker.shop
    - mailing.healthbooker.shop
    secretName: cloud-kubernetes-tls
  rules:
  - host: "healthbooker.shop"
    http:
      paths:
      - pathType: Prefix
        path: "/"
        backend:
          service:
            name: frontend-service
            port:
              number: 80
  - host: "backend.healthbooker.shop"
    http:
      paths:
      - pathType: Prefix
        path: "/"
        backend:
          service:
            name: backend-service
            port:
              number: 80
  - host: "admin.healthbooker.shop"
    http:
      paths:
      - pathType: Prefix
        path: "/"
        backend:
          service:
            name: admin-service
            port:
              number: 80  
  - host: "mailing.healthbooker.shop"
    http:
      paths:
      - pathType: Prefix
        path: "/"
        backend:
          service:
            name: mailing-service
            port:
              number: 80                        
  ingressClassName: nginx
